Fix table title truncate issue

--- a/sass/partials/_table.scss
+++ b/sass/partials/_table.scss
@@ -29,7 +29,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 66%;
+        width: 80%;
 
         h1 {
           white-space: nowrap;
